Fix search icon too high

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -292,7 +292,7 @@ h1.entry-title{
 .search-icon{
     font-size: 24px;
     color: #ababab;
-    top: 10px;
+    top: 13px;
     right: 15px;
 }
 
